<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_secondary">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_secondary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/mazeZoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBack"
            style="@style/Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/btn_back"
            android:onClick="onGoHomeHandle"
            android:textAlignment="viewStart"
            android:textSize="@dimen/fontsize_ui"
            app:icon="@drawable/arrow_back_icon"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/time"
            android:textAlignment="textEnd"
            android:textSize="@dimen/fontsize_ui" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_time"
            android:textSize="@dimen/fontsize_ui" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/empty_score"
            android:textAlignment="center"
            android:textSize="@dimen/fontsize_ui" />

    </LinearLayout>

    <com.otaliastudios.zoom.ZoomLayout
        android:id="@+id/mazeZoom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:scrollbars="vertical|horizontal"
        app:transformation="centerInside"
        app:transformationGravity="auto"
        app:alignment="center"
        app:overScrollHorizontal="true"
        app:overScrollVertical="true"
        app:overPinchable="true"
        app:horizontalPanEnabled="true"
        app:verticalPanEnabled="true"
        app:zoomEnabled="true"
        app:flingEnabled="true"
        android:clickable="false"
        app:scrollEnabled="true"
        app:oneFingerScrollEnabled="true"
        app:twoFingersScrollEnabled="true"
        app:threeFingersScrollEnabled="true"
        app:minZoom="0.7"
        app:minZoomType="zoom"
        app:maxZoom="20"
        app:maxZoomType="zoom"
        app:animationDuration="280"
        app:hasClickableChildren="true">

        <TableLayout
            android:id="@+id/mazeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            />

    </com.otaliastudios.zoom.ZoomLayout>


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_secondary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mazeZoom">

        <Button
            android:id="@+id/btnUndo"
            style="@style/Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_undo"
            app:icon="@drawable/undo_icon"
            app:iconGravity="textTop" />

        <Button
            android:id="@+id/btnDone"
            style="@style/Button.Dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="200dp"
            android:text="@string/btn_done"
            android:textAllCaps="true"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnHint"
            style="@style/Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_hint"
            app:icon="@drawable/bulb_icon" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>